--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch index.js",
+    "dev": "nodemon index.js",
     "start": "node index.js",
     "db:create": "psql -U poivre -d poivre -f ./data/create_tables.sql",
     "db:populate": "psql -U poivre -d poivre -f ./data/populate_tables.sql",
@@ -15,8 +15,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-session": "^1.18.0",
+    "nodemon": "^3.1.0",
+    "pg": "^8.11.3",
+    "sanitize-html": "^2.13.0",
     "sequelize": "^6.37.1"
   }
 }
