--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "bulma": "^0.9.4",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
