--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "bulma": "^0.9.4",
+    "jwt-decode": "^4.0.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vue3-carousel": "^0.3.1"
@@ -21,6 +22,7 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "sass": "^1.76.0",
     "vite": "^5.1.6"
   }
 }
