--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:front": "cd front && pnpm run dev",
     "dev:back": "cd back && pnpm run dev",
-    "dev": "concurrently \"cd front && pnpm run dev\" \"cd back && pnpm run dev\""
+    "dev": "concurrently \"cd back && pnpm run dev\" \"cd front && pnpm run dev\""
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "concurrently": "^8.2.2"
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0"
   }
 }
