--- a/front/package.json
+++ b/front/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "shop",
+  "homepage": "https://kfill420.github.io/poivre",
+  "name": "poivre",
   "version": "0.0.0",
   "private": true,
   "type": "module",
   "scripts": {
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -14,6 +16,7 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "bulma": "^0.9.4",
+    "gh-pages": "^6.1.1",
     "jwt-decode": "^4.0.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
