--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "Vuejs",
+  "name": "poivre",
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "deploy": "gh-pages -d front/dist",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:front": "cd front && pnpm run dev",
     "dev:back": "cd back && pnpm run dev",
@@ -12,7 +15,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "gh-pages": "^6.1.1"
   },
   "dependencies": {
     "jsonwebtoken": "^9.0.2",
