--- a/back/package.json
+++ b/back/package.json
@@ -22,6 +22,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
     "pg": "^8.11.3",
     "sanitize-html": "^2.13.0",
